[project]
name = "testbench"
version = "0.1.0"
description = ""
authors = [
    {name = "hugorouillard",email = "rouillard.hugo1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "testbench", from = "src" }]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

