[project]
name = "testbench"
version = "0.1.0"
description = ""
authors = [
    {name = "hugorouillard",email = "rouillard.hugo1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "testbench", from = "src" }]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-html = "^4.1.1"

[tool.pytest.ini_options]
addopts = "--cov=testbench --cov-report=term-missing --cov-report=html --html=report.html --self-contained-html"

[tool.coverage.run]
omit = [
    "src/testbench/__init__.py"
]

